<resources>
    <string name="app_name">My Movie Store</string>

    //hint...........................
    <string name="name_hint">Movie Name</string>
    <string name="genre_hint">Movie Genre</string>
    <string name="released_date">Release Date</string>
    <string name="country_hint">Country</string>
    <string name="director_hint">Director</string>
    <string name="mms">MMS</string>
    <string name="mymoviestore">My Movie Store</string>

    //button text--------------------------------
    <string name="save_movie">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    
    
    //String for navigation drawer
    
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

</resources>
