<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="#20b2aa"
    tools:context="com.example.rana.mymoviestore.AddMovieFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#ffffff"
        android:layout_marginBottom="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/movie_name_ET_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#ffffff"
        android:layout_marginBottom="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/genre_ET_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genre_hint"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#ffffff"
        android:layout_marginBottom="10dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/release_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/released_date"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="date"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColorHint="#ffffff">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/movie_country_ET_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_hint"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#ffffff"
        android:layout_marginBottom="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/director_ET_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/director_hint"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/save_movie_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save_movie"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="#7ccd7c"/>


</LinearLayout>
